background color test fix

--- a/estilo/palettes/rampant_purple.yml
+++ b/estilo/palettes/rampant_purple.yml
@@ -24,7 +24,7 @@ invalid: "#EC3A37"
 diffAdded: "#00FF00"
 diffRemoved: "#FF000D"
 matchBracket: "#AD70FC"
-gutter: "#28284E"
+gutter: "#462570"
 menuBackground: "#1F1F41"
 searchHighlight: "#FFFF03"
 currentSearch: "#ff7300"
