comment color fix

--- a/estilo/palettes/rampant_purple.yml
+++ b/estilo/palettes/rampant_purple.yml
@@ -8,8 +8,8 @@ contrast: "#FAD000"
 contrastLite: "#FFEE80"
 contrastLiteII: "#FAEFA5"
 highlight: "#FF7200"
-comment: "#B362FF"
-commentsLite: "#c991ff"
+comment: "#D5629B"
+commentsLite: "#D5629B"
 constants: "#FF628C"
 constantsLite: "#ff91ae"
 keywords: "#FF9D00"
