--- a/estilo/palettes/rampant_purple.yml
+++ b/estilo/palettes/rampant_purple.yml
@@ -2,7 +2,7 @@ white: "#E1EFFF"
 grey: "#cad7e5"
 background: "#462570"
 backgroundDark: "#3B1F5E"
-foreground: "#A599E9"
+foreground: "#D5629B"
 hoverBackground: "#4D21FC"
 contrast: "#FAD000"
 contrastLite: "#FFEE80"
